<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <androidx.cardview.widget.CardView
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:cardCornerRadius="8dp"
        android:backgroundTint="@color/grey">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/cereal"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleTv"
                android:textSize="@dimen/h3"
                android:text="@string/add_credit"
                android:layout_gravity="center"/>



            <EditText
                android:layout_below="@id/titleTv"
                android:fontFamily="@font/cereal"
                android:layout_centerHorizontal="true"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="number"
                android:hint="@string/d"
                android:id="@+id/addCreditEt"/>

            <Button
                android:layout_gravity="center_horizontal"
                android:id="@+id/okBtn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/orange"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cereal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:text="@string/ok"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>